--- a/index.html
+++ b/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <header class="cabecalho">
     
+   <img class="cabecalho-imagem" src="logoparanabg.png" alt="logoparanabg">
+   <ul class="cabecalho-lista">
+     <li class="cabecalho-lista-item"> Escola</li>
+     <li class="cabecalho-lista-item">Estudante</li>
+   </ul>
+    </header>
+    <section class="escola">
+      <div class="escola-div-conteudo">
+      <h2 class="escola-titulo">Sobre a Escola</h2>
+      <p class="escola-texto-um">O Grupo Escolar São José foi fundado en 1959 pela Colonizadora Rio Bom do Estado do Rio Grande do Sul que doou à FUNDEPAR um terreno escriturado no Tabelionato Becker nas folhas 104-Va 105-V do Livro 8-E Até o inicio de setembro de 1962 esteve sob o domínio de Cidade Gaicha, mas em 11 de setembro de 1962 ficou criado o Grupo Escolar de Tapira, situado na Avenida Rio Negro S/N, na zona urbana com dependencia administrativa Estadual. A primeira dintora do Gago Escolar de Tapira fol a professora Jovita Schmitz, que escolheu "São José para ser o Patrono da Escola, que é comemorado no dia 19 de março, Sus gestio foi de 1953 até agosto de 1969.</p>
+      <p class="escola-texto-dois"></p>
+    </div>
+      <img class="escola-imagem" src="13.png" alt="professor no quadro">
+    </section>
+    <section class="estudante">
+      <div class="estudante-todos">
+      <div class="estudante-div">
+      <a href="https://instagram.com/colegioestsaojose?igshid=MzRlODBiNWFlZA==">
+      </div>
+    <h2 class="estudante-titulo">SITES DA ESCOLA</h2>
+    <img class="icone-imagem" src="instagram.png" alt="instagram">
+    <img class="icone-imagem" src="facebook.png" alt="facebook">
+  </div>
+</div>
+  </section>
+  <footer class="rodape">
+    <img class="rodape-imagem" src="logoparanabg.png" alt="logoparanabg">
+</footer>
 </body>
 </html>
